test_programs/compile_failure/comptime_bit_shift_overflow/src/main.nr
fn main() -> pub i64 {
    comptime {
        1 << (-1_i64 << 32)
    }
}
